apps/pihole/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pihole-httproute
  annotations:
    glance.pmcd.io/monitor: "true"
    glance.pmcd.io/monitor-title: "PiHole"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: default
  hostnames:
    - pihole.x.pmcd.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: pihole-web
          kind: Service
          namespace: pihole
          port: 80
